Fix database cursors for PostgreSQL: remove use of uninitialized variable

BUG:371331